--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Bacode Tenzies">
+    <meta name="google-site-verification" content="cN8X-ViXvCmGTe_ujsib2FrC92m4dS5ChB-QyhzF-a8" />
     <title>Bacode Tenzies</title>
   </head>
   <body>
